[FIX] alignment of image in news single view (Podio bug_22)

--- a/dev/styles/main/plugins/news/news.less
+++ b/dev/styles/main/plugins/news/news.less
@@ -160,9 +160,22 @@
     width: 282px;
     margin: 0 0 0 25px;
 }
+.news-single .article .news-img-wrap a{
+    margin-bottom: 4px;
+}
+
+@media (max-width: 580px) {
+    .news-single .article .news-img-wrap {
+        float: none;
+        margin-left: 0;
+    }
+}
 
 .news-single .article .news-img-wrap img {
     float: none;
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .news-single .teaser-text {
